# clanki.ai

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  commitlint.config.js  components.json  conductor.json  drizzle.config.ts  groups.yml  knip.json  package.json  plan.md  tsconfig.frontend.json  tsconfig.json  tsconfig.worker.json  vercel.json  vite.config.ts  worker-configuration.d.ts  wrangler.json  wrangler.toml
.github/workflows/: analyze-caller.yml  analyze.yml  ci.yml
api/: server.ts
docs/: database-schema.md  graph-extraction-plan.md
drizzle/: 0000_huge_callisto.sql  0001_outstanding_red_wolf.sql  0002_first_deathstrike.sql  0003_known_ben_parker.sql  0004_waitlist_user_access.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
electron/: app-server.cjs  desktop-runner.cjs  main.cjs  node-utils.cjs  preload.cjs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: graph-data.json
frontend/src/: App.tsx  index.css  routeTree.gen.ts  router.tsx
graph/src/: analyze-for-ci.ts  generate-data.ts  group-graph.ts  index.ts  (+1 more)
sandbox/: task-runner.mjs
scripts/: prepare-tauri-sidecar.mjs  setup-conductor-worktree.sh
shared/: task-stream-events.ts
src/: index.css  routeTree.gen.ts  router.tsx  server.ts  start-types.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
worker/: package.json  wrangler.toml
(+254 files in other folders)
