[package]
name = "clanki-desktop"
version = "0.1.0"
description = "Clanki desktop app"
authors = ["Ruud Andriessen"]
edition = "2021"

[lib]
name = "clanki_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
